--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Game Promo Code Generator</h1>
+        <h1>Ax Hacker Hamster Hack </h1>
         <div class="form-group">
             <label for="gameSelect">Select Game</label>
             <select id="gameSelect">
@@ -54,7 +54,7 @@
         <div class="mycodes">
             <p>
                 The Key Generation may take upto 10 mins<br>
-                If you feel its not working then <a href="https://telegram.me/Insta_Buy_Follower">Contact Creator</a>
+                If you feel its not working then <a href="https://t.me/onlytruthcrypto">Contact Creator</a>
             </p>
             <button id="ShowKeysBtn">My Codes</button>
             <div id="generatedCodesContainer" style="display:none;">
@@ -64,7 +64,7 @@
 
         </div>
         <div class="footer">
-            <p>Disclaimer: This tool is for educational purposes only. Use responsibly.
+            <p>Disclaimer: This tool is made by axhacker aka Aadu Bhai
             <button id="telegramChannelBtn">Check out Our Telegram Channel 🆔</button></p>
             <button id="creatorChannelBtn">Contact Creator 🤖</button> 
             
